Fix bottom display of the overflow

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 }
 
 .js-source {
-  bottom: 30px;
+  bottom: 56px;
   left: 0%;
 }
 
